<resources>
    <string name="app_name">Basic clicker</string>
    <string name="button">Click</string>
    <string name="text">Your $: 0</string>
    <string name="buy">Buy 25%</string>
    <string name="buy2">Buy 50%</string>
    <string name="price">price 1: 10</string>
    <string name="price2">price 2: 20</string>
    <string name="ko">$ per click: 1</string>
    <string name="back">back</string>
    <string name="shop">Shop</string>
    <string name="Load">Load</string>
    <string name="Save">Save</string>
    <string name="Restart">Restart</string>
    <string name="result">Result</string>
    <string name="LOL">YOU ARE SO LUCKY!!! the chance you will see this screen was 1 to 1.000.000! Unfortunately it\'s not a good screen and all your progress was removed. If you really want to save your progress contact me. Vk.com/AizeRs  Good Luck! </string>
    <string name="RestartText">WARNING!!! This button removes all your in-game progress(money, koef, prices and else.)</string>
    <string name="ok">OK</string>
</resources>
