<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivity">

    <Button
        android:id="@+id/buy"
        android:layout_width="182dp"
        android:layout_height="46dp"
        android:onClick="onClickButton25"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/koefout"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/buy2"
        android:layout_width="182dp"
        android:layout_height="46dp"
        android:onClick="onClickButton50"
        android:text="@string/buy2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/koefout"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/koefout"
        android:layout_width="231dp"
        android:layout_height="49dp"
        android:text="@string/price"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/koefout2"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:text="@string/price2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="66dp"
        android:text="@string/Back"
        android:onClick="onClickButtonBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>